# cert-code

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cert_code/: __init__.py  cli.py  client.py  collector.py  config.py  models.py
cert_code/analyzers/: __init__.py  diff.py  language.py  lint.py  tests.py  typecheck.py
cert_code/hooks/: __init__.py  git.py  install.py
cert_code/integrations/: __init__.py  eslint.py  jest.py  mypy.py  pytest.py  ruff.py
tests/: __init__.py  test_cli.py  test_client.py  test_collector.py  test_diff_analyzer.py
tests/fixtures/: mypy_output.txt  pytest_output.txt  sample_diff.patch
